fixed code smells collect(Collectors.toList()) => toList()